--- a/templates/bill_form_page.html
+++ b/templates/bill_form_page.html
@@ -12,7 +12,7 @@
         <a href="{{url_for('home_page')}}">Home page</a>
         <p>Fill in the form and click the button to get the result</p>
         
-        <form>
+        <form action="results" method="post">
             {{billform.amount.label}} {{billform.amount}}
             <br>
             {{billform.period.label}} {{billform.period}}
