--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,10 @@
         <link rel="stylesheet" href="">
     </head>
     <body>
+        <!-- Page title -->
         <h1>Home Page</h1>
-        <a href="{{url_for('bill_form_page')}}">carrega aqui</a>
+        
+        <!-- Link to navigate to the bill form page using Flask's url_for function -->
+        <a href="{{url_for('bill_form_page')}}">Click here</a>
     </body>
 </html>
