--- a/templates/results.html
+++ b/templates/results.html
@@ -3,15 +3,17 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <!-- Page title (you can add a title inside the quotes) -->
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="">
     </head>
     <body>
-
+        <!-- Display the result for the first flatmate -->
         {{name1}} pays {{amount1}}
         <br>
+        <!-- Display the result for the second flatmate -->
         {{name2}} pays {{amount2}}
     </body>
 </html>
